# utill

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/skills/lazy-loading/: SKILL.md
.github/workflows/: build-and-publish.yaml
src/utill/: .gitignore  _lazy_import.py  _lazy_logger.py  bigquery.py  bq.py  cli.py  cloudstorage.py  constants.py  csv.py  dictionary.py  encryption.py  file.py  gcs.py  gdrive.py  input.py  json.py  metabase.py  my_bq.py  my_compare.py  my_const.py  my_csv.py  my_datetime.py  my_encryption.py  my_env.py  my_file.py  my_gcs.py  my_gdrive.py  my_input.py  my_json.py  my_mb.py  my_pg.py  my_queue.py  my_string.py  my_style.py  my_tunnel.py  my_xlsx.py  postgres.py  queue.py  settings.py  style.py  (+2 more)
src/utill/cmd/: _bq.py  _conf.py  _enc.py  _encryption.py  _gen.py  _main.py  _mb.py  _metabase.py  _pg.py  _postgres.py  _setting.py  utill.py
src/utill/templates/: db.json  mb.json  pg.json
