[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rdxz2-utill"
version = "1.0.0"
authors = [
  { name="Richard Dharmawan", email="richard.dharmawan@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "click==8.1.8",
  "duckdb==1.1.3",
  "humanize==4.11.0",
  "loguru==0.7.3",
  "paramiko==3.5.0",
  "pydantic-settings==2.7.1",
  "pydantic==2.10.6",
  "requests==2.32.3",
  "sshtunnel==0.4.0",
]

[project.scripts]
utill = "utill.cmd.utill:main"

[project.optional-dependencies]
google-cloud = [
  "google-cloud-bigquery==3.29.0",
  "google-cloud-storage==3.0.0",
]
postgresql = [
  "psycopg==3.2.2",
]
pdf = [
  "PyPDF2==3.0.1",
]
