[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rdxz2-utill"
version = "0.0.8"
authors = [
  { name="Richard Dharmawan", email="richard.dharmawan@gmail.com" },
]
description = "Your daily Python utility"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "click",
  "duckdb",
  "humanize",
  "loguru",
  "paramiko",
  "pydantic-settings",
  "pydantic",
  "requests",
  "sshtunnel==0.4.0",
]

[project.scripts]
utill = "utill.cmd.utill:main"

[project.optional-dependencies]
google-cloud = [
  "google-cloud-bigquery",
  "google-cloud-storage",
]
postgresql = [
  "psycopg",
]
pdf = [
  "PyPDF2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
utill = ["templates/*.json"]
